fix the width overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -65,6 +65,7 @@ header{
         
         height: 100vh;
         width: 100vw;
+        max-width: 100%;
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
